ros2_ws/log/build_2025-07-18_16-24-46/py_pubsub/stderr.log
  File "/home/henry/Rover-Unity/ros2_ws/install/py_pubsub/lib/python3.10/site-packages/py_pubsub/tcp_relay.py", line 50
    'command_control/ground_station_drive':,
                                          ^
SyntaxError: expression expected after dictionary key and ':'

